--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "9.0.0-rc.6",
     "@angular/router": "9.0.0-rc.6",
     "core-js": "^2.5.4",
+    "emotion": "^10.0.23",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
